update drupal job title

--- a/templates/fr/job/web-developer-drupal.html.twig
+++ b/templates/fr/job/web-developer-drupal.html.twig
@@ -1,6 +1,6 @@
 {% extends "layout.html.twig" %}
 
-{% block title %}{{ 'job.title' | trans }} - Web Developer (70% - 100%){% endblock %}
+{% block title %}{{ 'job.title' | trans }} - Developpeur Drupal (70% - 100%){% endblock %}
 
 {% block meta_description%}Job de développeur web à Lausanne, Suisse, PHP5, Symfony2, Elasticsearch, RabbitMQ, et d'autres technologies. Dans une chouette agence.{% endblock %}
 {% block head_scripts %}
@@ -18,7 +18,7 @@
     <section>
         <h1 class="title-separation magenta-sep">
             <span></span>
-            Web Developer (temps plein ou temps partiel)
+            Developpeur Drupal (temps plein ou temps partiel)
         </h1>
     </section>
 </div>
@@ -28,7 +28,7 @@
 <section>
     <div class="page-content">
         {# <h2>Nous avons trouvé la perle rare, le poste n'est plus à pourvoir. Merci à tous !</h2> #}
-        <h2>Nous cherchons un développeur Drupal pour agrandir notre équipe</h2>
+        <h2>Nous cherchons un expert Drupal pour agrandir notre équipe</h2>
 
         {#
         <p><small><a href="{{ path('job_show', { slug: 'web-developer-drupal', _locale: 'en' }) }}">Read the job offer in english</a></small></p>
@@ -39,6 +39,8 @@
             <li>Des projets innovants et variés</li>
             <li>Du temps pour travailler sur des projets Open Source</li>
             <li>Un budget pour suivre des conférences</li>
+            <li>Le choix de la machine de travail</li>
+            <li>Le travail en remote</li>
             <li>5 semaines de vacances</li>
             <li>Un excellent café, du redbull et des fruits secs</li>
             <li>Une table de ping-pong pour s'entrainer avec ses collègues</li>
@@ -46,25 +48,31 @@
         </ul>
 
         <h3>Tâches principales</h3>
-        <h4>Développement web</h4>
+        <h4>Expert Drupal</h4>
         <ul>
             <li>Développement PHP sur Drupal 7 et 8</li>
+            <li>Support pout le theming (réalisé par <a href="{{ path('team') }}">nos experts frontend</a>)</li>
             <li>Développement Javascript (AngularJS, jQuery)</li>
-            <li>Intégration HTML / CSS / SASS (réalisé par <a href="{{ path('team') }}">nos experts frontend</a>)</li>
         </ul>
 
         <h3>Formation et connaissances</h3>
         <ul>
-            <li>Expérience sur Drupal de minimum 2 ans</li>
+            <li>Expérience sur Drupal de 2 ans minimum</li>
             <li>Actif dans la communauté Drupal.org</li>
-            <li>Très bonnes connaissances des nouvelles technologies web</li>
             <li>Bonnes connaissances des bases de données (MySQL, PostgreSQL)</li>
             <li>Connaissance des outils Elasticsearch, Solr, un plus</li>
+            <li>Maitrise des outils de versionning (git)</li>
             <li>Connaissances HTTP, REST, CSS, HTML</li>
             <li>Bonne maîtrise de l’anglais</li>
             <li>Connaissance de l’allemand, un plus</li>
-            <li>Maitrise des outils de versionning (git)</li>
             <li>Command line proficiency with Linux/*nix system</li>
+        </ul>
+
+        <h3>Vous correspondez au profil si ...</h3>
+        <ul>
+            <li>Un Drupal sans Features, ça n'existe pas</li>
+            <li>Drush est votre meilleur ami</li>
+            <li>Drupal API (entity API, views API) font parties de votre vocabulaire</li>
         </ul>
 
         <h3>Exigences et compétences personnelles</h3>
@@ -98,7 +106,7 @@
                data-jobId="WEBDEV-2"
             ></script>
 #}
-        <p><a href="mailto:job@antistatique.net?subject=Je%20suis%20un%20d%C3%A9veloppeur%20Drupal%2C%20engagez-moi">job@antistatique.net</a> avec votre compte Github et votre profile de Drupal.org.
+        <p><a href="mailto:job@antistatique.net?subject=Je%20suis%20un%20d%C3%A9veloppeur%20Drupal%2C%20engagez-moi">job@antistatique.net</a> avec votre compte Github et votre profile Drupal.org.
         </p>
         <p>Les dossiers envoyés par la poste (mail physique) seront détruits.</p>
     </div>
