--- a/templates/fr/job/web-developer-drupal.html.twig
+++ b/templates/fr/job/web-developer-drupal.html.twig
@@ -30,16 +30,16 @@
         {# <h2>Nous avons trouvé la perle rare, le poste n'est plus à pourvoir. Merci à tous !</h2> #}
         <h2>Nous cherchons un expert Drupal pour agrandir notre équipe</h2>
 
-        {#
-        <p><small><a href="{{ path('job_show', { slug: 'web-developer-drupal', _locale: 'en' }) }}">Read the job offer in english</a></small></p>
-        #}
+
+        <p><a href="{{ path('job_show', { slug: 'web-developer-drupal', _locale: 'en' }) }}">Read the job offer in english</a></p>
+
 
         <h3>Nous offrons</h3>
         <ul>
             <li>Des projets innovants et variés</li>
             <li>Du temps pour travailler sur des projets Open Source</li>
             <li>Un budget pour suivre des conférences</li>
-            <li>Le choix de la machine de travail</li>
+            <li>Un laptop personnel</li>
             <li>Le travail en remote</li>
             <li>5 semaines de vacances</li>
             <li>Un excellent café, du redbull et des fruits secs</li>
@@ -78,7 +78,7 @@
         <h3>Exigences et compétences personnelles</h3>
         <ul>
             <li>Compte Github et profile Drupal.org (à mentionner dans la postulation)</li>
-            <li>Curieux et atentif aux besoins des utilisateurs</li>
+            <li>Curieux et attentif aux besoins des utilisateurs</li>
         </ul>
 
         <h3>Passion du web</h3>
