--- a/templates/fr/job/web-developer.html.twig
+++ b/templates/fr/job/web-developer.html.twig
@@ -70,7 +70,7 @@
         <h3>Exigences et compétences personnelles</h3>
         <ul>
             <li>Compte Github (à mentionner dans la postulation)</li>
-            <li>Curieux et atentif aux besoins des utilisateurs</li>
+            <li>Curieux et attentif aux besoins des utilisateurs</li>
         </ul>
 
         <h3>Passion du web</h3>
