--- a/templates/fr/team.html.twig
+++ b/templates/fr/team.html.twig
@@ -284,6 +284,7 @@
                 <p class="social-links">
                     <a class="twitter" href="https://twitter.com/apraxinealex"><span class="icon">T</span>@apraxinealex</a>
                     <a class="mail" href="mailto:alexandre@antistatique.net"><span class="icon">m</span>alexandre@antistatique.net</a>
+                    <a class="github" href="https://github.com/Alexandre-Apraxine"><span class="icon">O</span>Alexandre-Apraxine</a>
                 </p>
             </div>
         </div>
