--- a/templates/fr/team.html.twig
+++ b/templates/fr/team.html.twig
@@ -239,7 +239,7 @@
             <div class="photo"><img src="/assets/img/team/tfr.png"></div>
             <div class="description">
                 <h4>Toni Fisler</h4>
-                <p>Junior Frontend Web Developer</p>
+                <p>Frontend Web Developer</p>
                 <p class="social-links">
                     <a class="twitter" href="http://www.twitter.com/tonifisler"><span class="icon">T</span>@tonifisler</a>
                     <a class="mail" href="mailto:toni@antistatique.net"><span class="icon">m</span>toni@antistatique.net</a>
