--- a/templates/fr/team.html.twig
+++ b/templates/fr/team.html.twig
@@ -260,6 +260,19 @@
                 </p>
             </div>
         </div>
+        <div class="member">
+            <div class="photo"><img src="/assets/img/team/ccd.png"></div>
+            <div class="description">
+                <h4>Cédric Carrard</h4>
+                <p>Junior Backend Developer</p>
+                <p class="social-links">
+                    <a class="twitter" href="https://twitter.com/ccarrard"><span class="icon">T</span>@ccarrard</a>
+                    <a class="mail" href="mailto:cedric@antistatique.net"><span class="icon">m</span>cedric@antistatique.net</a>
+                    <a class="linkedin" href="https://www.linkedin.com/in/cedriccarrard"><span class="icon">L</span>LinkedIn</a>
+                    <a class="github" href="https://github.com/CedricCarrard"><span class="icon">O</span>CedricCarrard</a>
+                </p>
+            </div>
+        </div>
         <div class="member you">
             <div class="photo"><img src="/assets/img/team/play.png"></div>
             <div class="description">
