--- a/templates/fr/job/ux-designer.html.twig
+++ b/templates/fr/job/ux-designer.html.twig
@@ -27,7 +27,7 @@ api_key: lj5b50hfde72
 <section>
     <div class="page-content">
         <h2>
-            Nous cherchons un UX Designer d’exception pour agrandir notre équipe. Comprendre et interpretter les besoins des utilisateurs, modéliser les services et processus métier sont les prérequis de ce nouveau poste.
+            Nous cherchons un UX Designer d’exception pour agrandir notre équipe. Comprendre et interpréter les besoins des utilisateurs, modéliser les services et processus métier sont les prérequis de ce nouveau poste.
         </h2>
 
         <h3>Ce que nous offrons</h3>
@@ -41,10 +41,10 @@ api_key: lj5b50hfde72
         <h3>Tâches principales</h3>
         <ul>
             <li>Comprendre et transcrire les attentes du client</li>
-            <li>Interviews clients et utilisateur</li>
+            <li>Interviews clients et utilisateurs</li>
             <li>Organiser et suivre les sessions de tests utilisateurs</li>
             <li>Réaliser les sitemaps et flux de navigation</li>
-            <li>Réaliser les wireframes (dynamiques)</li>
+            <li>Réaliser les wireframes dynamiques</li>
         </ul>
 
         <h3>Profil du candidat idéal</h3>
@@ -53,7 +53,7 @@ api_key: lj5b50hfde72
             <li>Formation dans un domaine technique, diplôme universitaire ou HES</li>
             <li>Personne méthodique, rigoureuse et organisée</li>
             <li>Aptitude à travailler en équipe avec des développeurs et des designers</li>
-            <li>Avoir lu la litérature essentiel dans les domaines des tests utilisateurs, ergonomie, utilisabilité, architecture de l'information et expérience utilisateur</li>
+            <li>Avoir lu la littérature essentielle dans les domaines des tests utilisateurs, ergonomie, utilisabilité, architecture de l'information et expérience utilisateur</li>
             <li>Excellente maîtrise de l’anglais</li>
             <li>Excellente maîtrise du tennis de table, un vrai plus</li>
         </ul>
@@ -63,7 +63,7 @@ api_key: lj5b50hfde72
 
         <h3>Antistatique</h3>
         <p>
-            Antistatique est une agence digitale de 7 personnes basée à Lausanne, en Suisse. Nous accompagnons nos clients dans la réalisation de leur communication web, application mobile, e-commerce et dans la mise en place de stratégies e-marketing.
+            Antistatique est une agence digitale de 13 personnes basée à Lausanne, en Suisse. Nous accompagnons nos clients dans la réalisation de leur communication web, application mobile, e-commerce et dans la mise en place de stratégies e-marketing.
         </p>
         <p>
             Bien implantée dans la communauté web locale, toute l’équipe participe régulièrement aux meetups et conférences sur les domaines du web.
