--- a/templates/fr/job/web-developer-drupal.html.twig
+++ b/templates/fr/job/web-developer-drupal.html.twig
@@ -43,7 +43,7 @@
             <li>Le travail en remote</li>
             <li>5 semaines de vacances</li>
             <li>Un excellent café, du redbull et des fruits secs</li>
-            <li>Une table de ping-pong pour s'entrainer avec ses collègues</li>
+            <li>Une table de ping-pong pour s'entraîner avec ses collègues</li>
             <li>Du temps pour la veille et la formation continue</li>
         </ul>
 
@@ -61,7 +61,7 @@
             <li>Actif dans la communauté Drupal.org</li>
             <li>Bonnes connaissances des bases de données (MySQL, PostgreSQL)</li>
             <li>Connaissance des outils Elasticsearch, Solr, un plus</li>
-            <li>Maitrise des outils de versionning (git)</li>
+            <li>Maîtrise des outils de versionning (git)</li>
             <li>Connaissances HTTP, REST, CSS, HTML</li>
             <li>Bonne maîtrise de l’anglais</li>
             <li>Connaissance de l’allemand, un plus</li>
@@ -72,12 +72,12 @@
         <ul>
             <li>Un Drupal sans Features, ça n'existe pas</li>
             <li>Drush est votre meilleur ami</li>
-            <li>Drupal API (entity API, views API) font parties de votre vocabulaire</li>
+            <li>Drupal API (entity API, views API) font partie de votre vocabulaire</li>
         </ul>
 
         <h3>Exigences et compétences personnelles</h3>
         <ul>
-            <li>Compte Github et profile Drupal.org (à mentionner dans la postulation)</li>
+            <li>Compte Github et profil Drupal.org (à mentionner dans la postulation)</li>
             <li>Curieux et attentif aux besoins des utilisateurs</li>
         </ul>
 
@@ -85,7 +85,7 @@
         <p>Participer à notre veille technologique et au partage de connaissances (Rédaction d'articles du blog, présentations, animation de séminaires, etc).</p>
 
         <h3>Antistatique</h3>
-        <p>Antistatique est une agence digitale de 9 personnes (3 développeurs, 1 software designer, 2 designer, 2 cheffe de projet et 1 digital strategist) basée en Suisse à Lausanne.
+        <p>Antistatique est une agence digitale de 9 personnes (3 développeurs, 1 software designer, 2 designer, 2 chefs de projet et 1 digital strategist) basée en Suisse à Lausanne.
             Nous accompagnons nos clients dans la réalisation de leur communication web, application mobile, e-commerce et dans la mise en place de stratégies e-marketing.
         </p>
         <p>Bien implantée dans la communauté web locale, toute l’équipe participe régulièrement aux meetups et conférences sur les domaines du web.
@@ -106,7 +106,7 @@
                data-jobId="WEBDEV-2"
             ></script>
 #}
-        <p><a href="mailto:job@antistatique.net?subject=Je%20suis%20un%20d%C3%A9veloppeur%20Drupal%2C%20engagez-moi">job@antistatique.net</a> avec votre compte Github et votre profile Drupal.org.
+        <p><a href="mailto:job@antistatique.net?subject=Je%20suis%20un%20d%C3%A9veloppeur%20Drupal%2C%20engagez-moi">job@antistatique.net</a> avec votre compte Github et votre profil Drupal.org.
         </p>
         <p>Les dossiers envoyés par la poste (mail physique) seront détruits.</p>
     </div>
