add html/css to wireframe

--- a/templates/fr/job/ux-designer.html.twig
+++ b/templates/fr/job/ux-designer.html.twig
@@ -40,11 +40,11 @@ api_key: lj5b50hfde72
 
         <h3>Tâches principales</h3>
         <ul>
-            <li>Comprendre et transcrire les attentes du client</li>
+            <li>Comprendre et transcrire les attentes du client et des utilisateurs</li>
             <li>Interviews clients et utilisateurs</li>
             <li>Organiser et suivre les sessions de tests utilisateurs</li>
             <li>Réaliser les sitemaps et flux de navigation</li>
-            <li>Réaliser les wireframes dynamiques</li>
+            <li>Réaliser les wireframes (HTML/CSS)</li>
         </ul>
 
         <h3>Profil du candidat idéal</h3>
