Job title updates
Marc job title.

--- a/templates/fr/team.html.twig
+++ b/templates/fr/team.html.twig
@@ -154,7 +154,7 @@
             <div class="photo"><img src="/assets/img/team/mfh.png"></div>
             <div class="description">
                 <h4>Marc Friederich</h4>
-                <p>Interactive Medias Engineer</p>
+                <p>Software Designer & Founder</p>
                 <p class="social-links">
                     <a class="twitter" href="http://www.twitter.com/zufrieden"><span class="icon">T</span>@zufrieden</a>
                     <a class="mail" href="mailto:marc@antistatique.net"><span class="icon">m</span>marc@antistatique.net</a>
