--- a/templates/fr/team.html.twig
+++ b/templates/fr/team.html.twig
@@ -128,7 +128,7 @@
             <div class="photo"><img src="/assets/img/team/agz.png"></div>
             <div class="description">
                 <h4>Alberto Gomez</h4>
-                <p>Web Project Manager</p>
+                <p>Digital Strategist & Founder</p>
                 <p class="social-links">
                     <a class="twitter" href="http://www.twitter.com/kidvaldez"><span class="icon">T</span>@kidvaldez</a>
                     <a class="mail" href="mailto:alberto@antistatique.net"><span class="icon">m</span>alberto@antistatique.net</a>
@@ -141,7 +141,7 @@
             <div class="photo"><img src="/assets/img/team/gde.png"></div>
             <div class="description">
                 <h4>Gilles Doge</h4>
-                <p>Web Software Developer</p>
+                <p>Web Software Engineer & Founder</p>
                 <p class="social-links">
                     <a class="twitter" href="http://www.twitter.com/gil_les"><span class="icon">T</span>@gil_les</a>
                     <a class="mail" href="mailto:gilles@antistatique.net"><span class="icon">m</span>gilles@antistatique.net</a>
@@ -167,7 +167,7 @@
             <div class="photo"><img src="/assets/img/team/ygn.png"></div>
             <div class="description">
                 <h4>Yann Gouffon</h4>
-                <p>Frontend Web Developer</p>
+                <p>Frontend Developer</p>
                 <p class="social-links">
                     <a class="twitter" href="http://www.twitter.com/Yago_0"><span class="icon">T</span>@Yago_0</a>
                     <a class="mail" href="mailto:yann@antistatique.net"><span class="icon">m</span>yann@antistatique.net</a>
@@ -180,7 +180,7 @@
             <div class="photo"><img src="/assets/img/team/phm.png"></div>
             <div class="description">
                 <h4>Philippe Heim</h4>
-                <p>Digital Strategist</p>
+                <p>Dynamic Business Catalyst</p>
                 <p class="social-links">
                     <a class="twitter" href="http://www.twitter.com/eevy_philip"><span class="icon">T</span>@eevy_philip</a>
                     <a class="mail" href="mailto:philippe@antistatique.net"><span class="icon">m</span>philippe@antistatique.net</a>
@@ -193,7 +193,7 @@
             <div class="photo"><img src="/assets/img/team/som.png"></div>
             <div class="description">
                 <h4>Saniha Ozem</h4>
-                <p>Web Project Manager</p>
+                <p>Digital Project Manager</p>
                 <p class="social-links">
                     <a class="mail" href="mailto:saniha@antistatique.net"><span class="icon">m</span>saniha@antistatique.net</a>
                 </p>
@@ -203,7 +203,7 @@
             <div class="photo"><img src="/assets/img/team/dmt.png"></div>
             <div class="description">
                 <h4>Damien Magnenat</h4>
-                <p>Technical Project Manager</p>
+                <p>Digital Project Manager</p>
                 <p class="social-links">
                     <a class="twitter" href="http://www.twitter.com/DamienMagnenat"><span class="icon">T</span>@DamienMagnenat</a>
                     <a class="mail" href="mailto:damien@antistatique.net"><span class="icon">m</span>damien@antistatique.net</a>
@@ -228,7 +228,7 @@
             <div class="photo"><img src="/assets/img/team/smi.png"></div>
             <div class="description">
                 <h4>Sepehr Milani</h4>
-                <p>Junior Visual Designer</p>
+                <p>Visual Designer</p>
                 <p class="social-links">
                     <a class="mail" href="mailto:sepehr@antistatique.net"><span class="icon">m</span>sepehr@antistatique.net</a>
                     <a class="linkedin" href="http://ch.linkedin.com/pub/sepehr-milani/68/2a3/6b5"><span class="icon">L</span>LinkedIn</a>
@@ -239,7 +239,7 @@
             <div class="photo"><img src="/assets/img/team/tfr.png"></div>
             <div class="description">
                 <h4>Toni Fisler</h4>
-                <p>Frontend Web Developer</p>
+                <p>Frontend Developer</p>
                 <p class="social-links">
                     <a class="twitter" href="http://www.twitter.com/tonifisler"><span class="icon">T</span>@tonifisler</a>
                     <a class="mail" href="mailto:toni@antistatique.net"><span class="icon">m</span>toni@antistatique.net</a>
