--- a/assets/less/module-works.less
+++ b/assets/less/module-works.less
@@ -90,6 +90,9 @@
   #prateo {
     background-image: url(../img/portfolio-prateo.jpg);
   }
+  #devenez {
+    background-image: url(../img/portfolio-devenez.jpg);
+  }
 }
 
 /*
