--- a/templates/fr/team.html.twig
+++ b/templates/fr/team.html.twig
@@ -249,6 +249,17 @@
             </div>
         </div>
         <div class="member">
+            <div class="photo"><img src="/assets/img/team/cfi.jpg"></div>
+            <div class="description">
+                <h4>Charlotte Fahrni</h4>
+                <p>Office Manager</p>
+                <p class="social-links">
+                    <a class="mail" href="mailto:cedric@antistatique.net"><span class="icon">m</span>charlotte@antistatique.net</a>
+                    <a class="linkedin" href="https://www.linkedin.com/pub/charlotte-fahrni/77/b52/20b"><span class="icon">L</span>LinkedIn</a>
+                </p>
+            </div>
+        </div>
+        <div class="member">
             <div class="photo"><img src="/assets/img/team/aae.png"></div>
             <div class="description">
                 <h4>Alexandre Apraxine</h4>
