--- a/templates/fr/portfolio/devenez.html.twig
+++ b/templates/fr/portfolio/devenez.html.twig
@@ -151,6 +151,14 @@
       <p>
         <img src="/assets/img/devenez/image03.png" class="full-width">
       </p>
+      <br>
+      <img src="/assets/img/devenez/DSC_8136.jpg" class="full-width">
+      <img src="/assets/img/devenez/DSC_8160.jpg" class="full-width">
+      <img src="/assets/img/devenez/DSC_8166.jpg" class="full-width">
+      <img src="/assets/img/devenez/DSC_8171.jpg" class="full-width">
+      <img src="/assets/img/devenez/DSC_8190.jpg" class="full-width">
+      <img src="/assets/img/devenez/DSC_8207.jpg" class="full-width">
+      <img src="/assets/img/devenez/DSC_8252.jpg" class="full-width">
     </div>
   </section>
   <section class="isolated">
