--- a/templates/fr/portfolio/devenez.html.twig
+++ b/templates/fr/portfolio/devenez.html.twig
@@ -99,6 +99,9 @@
     </div></section>
   </div>
   <section>
+    <img src="/assets/img/devenez/macbook1.png" class="full-width">
+  </section>
+  <section>
     <div class="page-content">
 
       <h2>Une nouvelle identité</h2>
@@ -112,6 +115,9 @@
     </div>
   </section>
   <section>
+    <img src="/assets/img/devenez/mobile.png" class="full-width">
+  </section>
+  <section>
     <div class="page-content">
 
       <h2>Un objectif</h2>
@@ -121,6 +127,9 @@
       <p>Le fil rouge de la campagne résidait dans cette idée: montrer que toute personne, homme ou femme, étudiant ou expérimentés, pouvait prétendre à l’un de ces postes</p>
 
     </div>
+  </section>
+  <section>
+    <img src="/assets/img/devenez/macbook2.png" class="full-width">
   </section>
   <section>
     <div class="page-content">
