Correction lien linkedin noemie

--- a/templates/fr/team.html.twig
+++ b/templates/fr/team.html.twig
@@ -291,7 +291,7 @@
                 <p>Junior UX Designer</p>
                 <p class="social-links">
                     <a class="mail" href="mailto:noemie@antistatique.net"><span class="icon">m</span>noemie@antistatique.net</a>
-                    <a class="linkedin" href="ch.linkedin.com/in/nsandoz"><span class="icon">L</span>LinkedIn</a>
+                    <a class="linkedin" href="http://ch.linkedin.com/in/nsandoz"><span class="icon">L</span>LinkedIn</a>
                     <a class="github" href="https://github.com/nsz"><span class="icon">O</span>nsz</a>
                 </p>
             </div>
