--- a/assets/less/module.less
+++ b/assets/less/module.less
@@ -82,7 +82,7 @@ header nav ul li:first-child{
     padding-bottom: 0.8em;
     border-bottom: 1px solid @black80;
     font-family: @serifFontFamily;
-    font-style: italic;
+    font-style: normal;
     .font-size(18);
   }
 }
