--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -14,6 +14,8 @@
     <link rel="shortcut icon" type="image/x-icon" href="{{ app.request.basepath }}/favicon.ico?v=3e83083" />
 
     <link href="{{ app.request.basepath }}/assets/css/antistatique.css?v=3e83083" rel="stylesheet" type="text/css" />
+    <script src="//use.typekit.net/lfl3jyz.js"></script>
+    <script>try{Typekit.load();}catch(e){}</script>
 
 <!--[if lt IE 9]>
     <script src="{{ app.request.basepath }}/assets/js/html5.js"></script>
